--- a/策略模式/index.html
+++ b/策略模式/index.html
@@ -291,7 +291,7 @@
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/java/">Java (6)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (5)</a>
+                <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (9)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/uml/">UML (2)</a>
             </li><li class="cat-item cat-item-2">
@@ -299,7 +299,9 @@
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/">数据结构 (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/">设计模式 (9)</a>
+                <a href="https://onlythepiano.github.io/categories/%E7%A6%BB%E6%95%A3%E6%95%B0%E5%AD%A6/">离散数学 (1)</a>
+            </li><li class="cat-item cat-item-2">
+                <a href="https://onlythepiano.github.io/categories/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/">设计模式 (10)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E8%BD%AF%E4%BB%B6%E5%B7%A5%E7%A8%8B/">软件工程 (2)</a>
             </li>
@@ -316,6 +318,24 @@
         <h2>Recent Posts</h2>
         <ul>
             <li>
+                <a href="/%E8%A3%85%E9%A5%B0%E8%80%85%E6%A8%A1%E5%BC%8F/">装饰者模式</a>
+            </li>
+            <li>
+                <a href="/%E5%A4%8D%E5%88%B6/">复制</a>
+            </li>
+            <li>
+                <a href="/%E6%95%B0%E7%90%86%E9%80%BB%E8%BE%91/">数理逻辑</a>
+            </li>
+            <li>
+                <a href="/mysql-%E5%BA%94%E7%94%A8%E5%B1%82%E4%BC%98%E5%8C%96/">MySQL-应用层优化</a>
+            </li>
+            <li>
+                <a href="/mysql-%E9%AB%98%E7%BA%A7%E7%89%B9%E6%80%A7/">MySQL-高级特性</a>
+            </li>
+            <li>
+                <a href="/mysql-%E6%9F%A5%E8%AF%A2%E6%80%A7%E8%83%BD%E4%BC%98%E5%8C%96/">MySQL-查询性能优化</a>
+            </li>
+            <li>
                 <a href="/java%E8%BE%93%E5%85%A5%E8%BE%93%E5%87%BA/">Java输入输出</a>
             </li>
             <li>
@@ -326,24 +346,6 @@
             </li>
             <li>
                 <a href="/%E5%88%86%E8%A1%A8%E5%92%8C%E5%88%86%E5%8C%BA/">分表和分区</a>
-            </li>
-            <li>
-                <a href="/%E7%B4%A2%E5%BC%95/">索引</a>
-            </li>
-            <li>
-                <a href="/%E6%95%B0%E6%8D%AE%E6%9F%A5%E8%AF%A2/">数据查询</a>
-            </li>
-            <li>
-                <a href="/mysql/">MySQL</a>
-            </li>
-            <li>
-                <a href="/b%E6%A0%91/">B树</a>
-            </li>
-            <li>
-                <a href="/%E5%BB%BA%E7%AD%91%E8%80%85%E6%A8%A1%E5%BC%8F/">建筑者模式</a>
-            </li>
-            <li>
-                <a href="/5%E5%8F%B7%E6%9D%AF/">5号杯</a>
             </li>
         </ul>
     </aside>
