--- a/2号杯/index.html
+++ b/2号杯/index.html
@@ -270,7 +270,7 @@
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/uml/">UML (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/%E5%8F%AF%E4%B9%90/">可乐 (6)</a>
+                <a href="https://onlythepiano.github.io/categories/%E5%8F%AF%E4%B9%90/">可乐 (7)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/">数据结构 (2)</a>
             </li><li class="cat-item cat-item-2">
@@ -292,6 +292,9 @@
     <aside class="widget widget_recent_entries">
         <h2>Recent Posts</h2>
         <ul>
+            <li>
+                <a href="/7%E5%8F%B7%E6%9D%AF/">7号杯</a>
+            </li>
             <li>
                 <a href="/%E6%A1%A5%E6%8E%A5%E6%A8%A1%E5%BC%8F/">桥接模式</a>
             </li>
@@ -318,9 +321,6 @@
             </li>
             <li>
                 <a href="/%E5%A4%8D%E5%88%B6/">复制</a>
-            </li>
-            <li>
-                <a href="/%E6%95%B0%E7%90%86%E9%80%BB%E8%BE%91/">数理逻辑</a>
             </li>
         </ul>
     </aside>
