--- a/java并发-进程线程/index.html
+++ b/java并发-进程线程/index.html
@@ -190,7 +190,7 @@
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/hugo/">Hugo (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/java/">Java (16)</a>
+                <a href="https://onlythepiano.github.io/categories/java/">Java (17)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (9)</a>
             </li><li class="cat-item cat-item-2">
@@ -221,6 +221,9 @@
         <h2>Recent Posts</h2>
         <ul>
             <li>
+                <a href="/%E5%BA%8F%E5%88%97%E5%8C%96/">序列化</a>
+            </li>
+            <li>
                 <a href="/java%E9%9B%86%E5%90%88-setlistmap/">Java集合-Set、List、Map</a>
             </li>
             <li>
@@ -246,9 +249,6 @@
             </li>
             <li>
                 <a href="/%E6%A1%A5%E6%8E%A5%E6%A8%A1%E5%BC%8F/">桥接模式</a>
-            </li>
-            <li>
-                <a href="/java%E5%B9%B6%E5%8F%91-%E8%BF%9B%E7%A8%8B%E7%BA%BF%E7%A8%8B2/">Java并发-进程线程2</a>
             </li>
         </ul>
     </aside>
